2004-10-26  David Malcolm  <dmalcolm@redhat.com>

	* cong-language.h, cong-language.c, cong-dispspec.c: 

	Fixed name/description handling within the dispspec->XML code 

	* cong-node.c, cong-node.h: 

	Added some news ways to create nodes

	* cong-language.c: 

	Allow language to be NULL; uses this rather than empty string in
	case where xml:lang attribute is missing

	* cong-util.h, cong-util.c, cong-dispspec-element.c: 

	Moved hash functions for strings with NULL support to cong-util

2004-10-26  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec.c: 

	Reimplemented loading and usage of name/descriptions to use cong-language
	to (hopefully) improve i18n support.

	* Makefile.am, cong-language.h, cong-language.c: 

	Added new cong-language.[ch] files

2004-10-25  David Malcolm  <dmalcolm@redhat.com>

	* cong-vfs.c: 

	Applied patch by Jeff Martin that removes the attempt to fixup
	relative paths, since it appears to no longer be needed and is
	breaking webdav support.

2004-10-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-edit-preferences.c: 

	Changed dispspec list from a two-column name/description list to
	a single column with the titles presented in a different style;
	removed some dead code.

2004-10-22  David Malcolm  <dmalcolm@redhat.com>

	* cong-node.h: 

	Disable CONG_NODE_SELF_TEST for now, to get an instant big speedup.

	* cong-editor-node-element-span.c, cong-document.h: 

	Make the warn about bug 124507 Dialog of Doom only appear once per
	document, rather than continuously popping up as the error recurs.

2004-10-20  Douglas Burke  <dburke@cfa.harvard.edu>
 
	* cong-primary-window.c, cong-primary-window.h:
 
 	Added cong_primary_window_action_set_sensitive(), and
 	cong_primary_window_action_set_label().
 
	* cong-menus.c:
 
 	Updated to use cong_primary_window_action_set_sensitive() and
 	cong_primary_window_action_set_label() functions rather than the
 	SET_ACTION_LABEL and SET_ACTION_SENSITIVE macros. The Export