@@ -1655,15 +1655,14 @@ static const gchar *ui_description =
 "    </menu>"
 "    <menu action='HelpMenu'>"
 "      <menuitem action='Contents'/>"
+"      <menuitem action='Homepage'/>"
 "      <menuitem action='About'/>"
 "    </menu>"
 "  </menubar>"
 "  <popup action='ContextMenu'>"
-"      <menuitem action='Homepage'/>"
-"      <separator name='ContextSep1'/>"
 "      <menuitem action='Cut'/>"
 "      <menuitem action='Copy'/>"
-"      <separator name='ContextSep2'/>"
+"      <separator name='ContextSep1'/>"
 "      <menu action='NewSubelement'/>"
 "      <menu action='NewSibling'/>"
 "      <menu action='RemoveSpanTagSubmenu'/>"
